--- a/for-friends/src/App.css
+++ b/for-friends/src/App.css
@@ -30,9 +30,9 @@ h2 {
 
 .form-container {
   width: 25%;
+  height: 15%;
   display: flex;
-  flex-direction: column;
-  justify-content: justify-content;
+  flex-direction: row;
   align-items: flex-start;
   padding: 2rem;
 }
@@ -43,11 +43,9 @@ h2 {
 
 .success,
 .failure {
-  position: absolute;
-  right: 0;
-  left: 0;
+  margin: 10px 0;
   padding: 1rem;
-  text-align: center; /* Center the text */
+  text-align: center;
 }
 
 .success {
@@ -56,4 +54,9 @@ h2 {
 
 .failure {
   color: red;
+}
+
+img {
+  max-width: 100%;
+  margin-top: 20px;
 }
